[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sounds/UI/ButtonPress.mp3" type="AudioStream" id=1]
[ext_resource path="res://assets/ui/fonts/Roboto-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui/fonts/Roboto-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sounds/UI/Mouseover.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/ui/menus/loseScreen/LoseScreen.gd" type="Script" id=6]
[ext_resource path="res://assets/ui/buttonsTheme/buttonBig/buttonBig.tres" type="Theme" id=7]

[sub_resource type="DynamicFont" id=1]
size = 139
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Label:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "zoom"
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="LoseScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 808.0
margin_top = 376.0
margin_right = -791.0
margin_bottom = -562.0
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.137
anchor_top = 0.201
anchor_right = 0.137
anchor_bottom = 0.201
margin_left = -1754.98
margin_top = -1202.54
margin_right = 2245.02
margin_bottom = 2797.46
color = Color( 0, 0, 0, 0.694118 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.5
margin_top = 28.0
margin_right = -5.5
margin_bottom = 28.0

[node name="Label" type="Label" parent="Control"]
margin_left = -931.0
margin_top = -194.0
margin_right = 916.0
margin_bottom = -31.0
custom_fonts/font = SubResource( 1 )
text = "You died!"
align = 1
valign = 1

[node name="ButtonLeft" type="Button" parent="Control"]
margin_left = -508.0
margin_top = 117.0
margin_right = -14.0
margin_bottom = 287.0
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 4 )
text = "Restart from Checkpoint"

[node name="ButtonRight" type="Button" parent="Control"]
margin_left = 114.0
margin_top = 118.152
margin_right = 583.0
margin_bottom = 288.152
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 5 )
text = "End Game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/zoom = SubResource( 3 )

[node name="ButtonPressSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 1 )
bus = "Sound Effects"

[node name="ButtonHoverSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
bus = "Sound Effects"

[connection signal="mouse_entered" from="Control/ButtonLeft" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Control/ButtonLeft" to="." method="_on_ButtonLeft_pressed"]
[connection signal="mouse_entered" from="Control/ButtonRight" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Control/ButtonRight" to="." method="_on_ButtonRight_pressed"]
